# apps/backend/src/app.dto.ts
@@ -1,0 +1,7 @@
+export class HealthResponseDto {
+  status!: string;
+}
+
+export class ProtectedResponseDto {
+  message!: string;
+}
